Fix vertex groups not rendering properly with GPU subdivision

This was missing the BMesh case. Issue found while investigating T95827.